# image_filters

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: api.rst  conf.py  examples.rst  index.rst  usage.rst
process_images/: __init__.py
tests/: test_process_images.py
